design : 1. <title>PaulBasset | Portfolio</title>으로 변경완료 2. 하위메뉴 선택시 자동으로 닫히게 수정 :  window.InnerWidth < 780 일 때에만 작동하는 setState 함수를 추가하여 해결하였습니다 3. nav의 높이가 100% 였기 때문에 발생한 현상이며, 높이를 조정하고 이벤트 리스너 범위를 조절하여 해결하였습니다. 4. text-shadow를 추가하여 시인성을 향상시켰습니다. 5. 이벤트 배너 간 아이템들간의 간격을 조정하였고, 호버시 텍스트부분 배경박스의 투명도를 0.1 ⇒ 0.7로 증가시켰습니다. 6. 서브페이지의 nav bar의 너비를 %값으로 변경, 아이템 리스트의 레이아웃에 그리드레이아웃을 적용하였습니다. 7. 이벤트, 상품별 상세페이지에 미디어쿼리를 적용하였습니다.

--- a/src/css/_banner.scss
+++ b/src/css/_banner.scss
@@ -1,21 +1,38 @@
 .main-banner {
+  width: 100%;
   background-color: rgb(56, 46, 44);
+  display: flex;
+  justify-content: space-around;
   padding: 10% 5%;
 
-  &-item {
+  .swiper {
     width: 100%;
+  }
+
+  .swiper-slide {
+    width: 50% !important;
+    margin-right: 20%;
+  }
+
+  .swiper-slide img {
+    display: block;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &-item {
     position: relative;
     overflow-x: visible;
     opacity: 0.7;
     transition: all 0.5s;
-    margin: 0 5%;
 
     article {
-      padding: 5% 10%;
+      padding: 5% 5%;
       background-color: rgba($color: #000000, $alpha: 0.3);
       position: absolute;
       overflow-x: visible;
       top: 10%;
+      transition: all 0.3s;
 
       h2 {
         color: white;
@@ -37,6 +54,10 @@
 
     &:hover {
       opacity: 1;
+
+      article {
+        background-color: rgba($color: #000000, $alpha: 0.7);
+      }
 
       h2 {
         opacity: 1;
