--- a/src/css/_brandhistory.scss
+++ b/src/css/_brandhistory.scss
@@ -1,13 +1,14 @@
 .brand-history {
-  width: 70%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  margin: 0 auto;
+  margin: 80px auto;
 
   section {
     width: 100%;
+    margin-bottom: 50px;
   }
 
   article {
@@ -15,15 +16,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin: 50px 0;
+    padding: 0 5%;
+    margin-bottom: 50px;
 
     h1 {
-      margin-left: 100px;
       font-weight: bold;
     }
 
     p {
-      margin-left: 100px;
       margin-bottom: 50px;
     }
 
@@ -37,10 +37,10 @@
     display: flex;
     align-items: flex-end;
     // justify-content: space-between;
-    margin-left: 100px;
     margin-top: 5px;
 
     li {
+      width: 20%;
       text-align: center;
       white-space: nowrap;
       padding-right: 5%;
@@ -68,17 +68,16 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    padding: 0 5%;
 
     section {
       display: flex;
       justify-content: flex-start;
 
       img {
-        width: 50%;
+        // width: 50%;
         max-width: 200px;
         height: 100px;
-        margin-left: 100px;
-        margin-top: 50px;
       }
 
       span {
@@ -86,8 +85,6 @@
       }
 
       p {
-        margin-left: 70px;
-
         h2 {
           font-weight: bold;
         }
@@ -126,6 +123,11 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 20%;
+
+    img {
+      width: 100%;
+    }
+
     .color {
       margin-left: 10%;
     }
@@ -135,5 +137,29 @@
         font-weight: bold;
       }
     }
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .brand-history {
+    .pattern-color {
+      grid-template-columns: repeat(1, 1fr);
+      row-gap: 0%;
+
+      .color {
+        margin-left: 0%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .brand-history ul li {
+    font-size: 12px;
+  }
+
+  .brand-history article p {
+    margin-left: 30px;
+    font-size: 14px;
   }
 }
