--- a/src/css/_event.scss
+++ b/src/css/_event.scss
@@ -1,18 +1,3 @@
-// .sub-bg {
-//   background-image: url(../../public/image/eventSubVisual.jpg);
-//   background-position: center;
-//   width: 100%;
-//   height: 300px;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-
-//   em {
-//     color: #fff;
-//     font-size: 48px;
-//   }
-// }
-
 .sub-wrap {
   display: flex;
   flex-direction: column;
@@ -29,7 +14,7 @@
 
   p {
     padding: 20px 10%;
-    font-size: 2vw;
+    font-size: 14px;
     border-bottom: 1px solid #eee;
   }
 
