--- a/src/css/_brandprinciple.scss
+++ b/src/css/_brandprinciple.scss
@@ -25,3 +25,9 @@
   margin-left: -10%;
   display: flex;
 }
+
+@media screen and (max-width: 1080px) {
+  .principle-slide {
+    display: none;
+  }
+}
