--- a/src/css/_detail.scss
+++ b/src/css/_detail.scss
@@ -7,6 +7,10 @@
   margin: 0 auto;
   padding: 5% 0;
 
+  img {
+    width: 100%;
+  }
+
   article {
     text-align: center;
   }
@@ -17,7 +21,7 @@
     color: white;
     background-color: tan;
     cursor: pointer;
-    margin-top: 2%; 
+    margin-top: 2%;
     border-radius: 10px;
     opacity: 0.5;
     transition: all 0.3s;
@@ -25,5 +29,16 @@
     &:hover {
       opacity: 1;
     }
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .detail {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 780px) {
+  .detail {
+    width: 90%;
   }
 }
