--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -21,3 +21,16 @@ body {
   font-family: "Noto Sans KR", "Roboto", sans-serif;
   font-size: 14px;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #382e2c;
+  border-radius: 20px;
+}
