--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,19 @@ body {
   font-size: 14px;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #382e2c;
+  border-radius: 20px;
+}
+
 .nothing {
   height: 80vh;
   display: flex;
