--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -23,7 +23,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  display: none;
 }
 
 ::-webkit-scrollbar-track {
@@ -32,5 +32,4 @@ body {
 
 ::-webkit-scrollbar-thumb {
   background-color: #382e2c;
-  border-radius: 20px;
 }
